# polkavm-erc20-in-rust

./: .gitignore  Cargo.toml  README.md  build.sh  erc20.polkavm
src/: erc20.rs  erc20.sol
ts/: env.example  erc20.ts  main.ts  package.json
